2013-04-05  Richard Frith-Macdonald <rfm@gnu.org>

        * config/pathtls.m4: Try to guess gnutls flags if no config found
        * configure: regenerate
        * Tools/AGSHtml.m: Fix error when title index missing.

2013-04-03  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSSocketPort.m: Improve/simplify invalidation.
        * Source/NSXMLParser.m:
        Fix (implement) parsing of entities inside quoted strings.

2013-03-28  Richard Frith-Macdonald <rfm@gnu.org>

        Make release 1.24.4
        * Documentation/ReleaseNotes.gsdoc:
        * Documentation/news.texi:
        * Headers/Foundation/NSFileManager.h:
        * Source/NSFileManager.m:
        Prepare documentation for release

2013-03-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSCalendar.m:
        * Headers/Foundation/NSCalendar.h:
        Rewrite NSCalendar instance variable usage to avoid breaking binary
        compatibility.  Fix methods for setting the first week day and
        the minimum number of days in the first week of a month.

2013-03-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAffineTransform.m:
        Fix decoding of keyed archive containing identity transform.
	* Source/NSString.m:
	* Tests/base/NSString/tilde.m:
        Fix to standardize string if necessary to determine whether it has
        the home directory as a prefix.

2013-03-23  Fred Kiefer <FredKiefer@gmx.de>

        * Source/NSXMLNode.m (-XMLStringWithOptions:): Revert change I
	made on 2012-12-01.

2013-03-20  Richard Frith-Macdonald <rfm@gnu.org>

        * Tests/base/NSCalendar/features-10-7.m:
        * Source/NSCalendar.m:
        * Headers/Foundation/NSCalendar.h:
        New OSX 10.7 methods supplied by Lobos Dolezel and rewritten somewhat
        to avoid breaking binary compatibility.

2013-03-17  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSSet.m: Some optimisation for set intersection.

2013-03-16  Fred Kiefer <FredKiefer@gmx.de>
