@@ -1,3 +1,7 @@
+2013-04-08  Richard Frith-Macdonald <rfm@gnu.org>
+
+        * Source/NSNotificationCenter.m: Fix bug #38680
+
 2013-04-05  Richard Frith-Macdonald <rfm@gnu.org>
 
         * config/pathtls.m4: Try to guess gnutls flags if no config found
